packages/typ/tests/fixtures/diagnostics/0924_gadt_eval_bool_branch_mismatch_07.ml.infer.expected
File "0924_gadt_eval_bool_branch_mismatch_07.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0924_gadt_eval_bool_branch_mismatch_07 is not a valid module name.

File "0924_gadt_eval_bool_branch_mismatch_07.ml", line 7, characters 18-19:
7 |   | Bool_eta b -> 6
                      ^
Error: The constant 6 has type int but an expression was expected of type
         a = bool
