packages/typ/tests/fixtures/diagnostics/0924_gadt_eval_bool_branch_mismatch_07.ml
type _ expr_eta =
  | Int_eta : int -> int expr_eta
  | Bool_eta : bool -> bool expr_eta

let eval_eta : type a. a expr_eta -> a = function
  | Int_eta n -> n
  | Bool_eta b -> 6
